--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -1,8 +1,17 @@
 .navbar {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   background-color: #013914;
   color: white;
+  transition: 0.5s all ease;
+  position: sticky;
+  top: 0;
+
+  &.active {
+    background-color: white;
+    color: black;
+  }
 
   .container {
     width: 1000px;
@@ -22,7 +31,8 @@
       display: flex;
       gap: 20px;
       align-items: center;
-      font-weight: 600;
+      font-weight: 500;
+      font-family: "Montserrat", sans-serif;
       button {
         color: white;
         padding: 10px;
@@ -30,7 +40,28 @@
         border: 1px solid white;
         cursor: pointer;
         background-color: transparent;
+
+        &:hover {
+          background-color: #1dbf73;
+          border-color: #1dbf73;
+        }
       }
     }
+  }
+
+  hr {
+    width: 100%;
+    height: 0;
+    border: 0.4px solid lightgreen;
+  }
+
+  .menu {
+    width: 1000px;
+    padding: 8px 0px;
+    display: flex;
+    justify-content: space-between;
+    font-weight: 300;
+    color: gray;
+    font-family: "Montserrat", sans-serif;
   }
 }
