Featured Componets start

--- a/src/components/navbar/NavBar.scss
+++ b/src/components/navbar/NavBar.scss
@@ -94,6 +94,7 @@
     justify-content: space-between;
     font-weight: 300;
     color: gray;
+    font-size: small;
     font-family: "Montserrat", sans-serif;
   }
 }
